# qutip-symbolic

./: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
.github/workflows/: test.yml
example-notebooks/: lecture-sympsi-atom-cavity.md  lecture-sympsi-optomechanics.md  lecture-sympsi-resonator.md  lecture-sympsi-semiclassical-eqm.md  lecture-sympsi-toc.md  lecture-sympsi-two-level-system.md
qutip_symbolic/: bch.py
qutip_symbolic/_sympy_physics_quantum/: operator.py
src/qutip_symbolic/: bch.py  commutators.py  operator_utilities.py  qsimplify.py  transformations.py
src/qutip_symbolic/_sympy_physics_quantum/: pauli.py
src/qutip_symbolic/compat/: commutator.py  pauli.py
tests/: test_bch.py  test_commutators.py  test_operator_utilities.py
