[metadata]
name = qutip-symbolic
url = https://github.com/qutip/qutip-symbolic
description = A set of useful extensions to sympy.physics.quantum.
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
keywords = quantum, physics, symbolic
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
author = Robert Johansson, Eunjong Kim, Alexander Pitchford, Simon Cross
author_email = qutip-admin@googlegroups.com
platforms = Linux, Mac OSX, Unix, Windows
version = 0.0.1dev

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    sympy==1.3

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest>=5.2
notebooks =
    jupyter
    jupytext
full =
    %(tests)s
    %(notebooks)s
